--- a/templates/test.html
+++ b/templates/test.html
@@ -1,1 +1,14 @@
-test
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>"Скрининг от Medtrack"</title>
+</head>
+<body bgcolor="e1f4f5">
+<b>Скрининги</b> <br>
+<a href="/imt">Узнать индекс массы тела(ИМТ)</a><br>
+
+
+<br><br><br>
+
+</html>
